@@ -175,6 +175,16 @@ project).</p>
       </td>
       <td valign="top" align="center">No</td>
     </tr>
+    <tr>
+      <td valign="top">
+        prefixSeparator
+      </td>
+      <td valign="top">
+        Specifies the separator to be used between the prefix and the
+        target name.  Defaults to ".".
+      </td>
+      <td valign="top" align="center">No</td>
+    </tr>
   </tbody>
 </table>
 
