@@ -516,8 +516,9 @@ Other changes:
    STARTTLS.
    Bugzilla Report 46063.
 
- * <import> has a new attribute "as" that can be used to control the
-   prefix prepended to the imported target's names.
+ * <import> has new attributes "as" and "prefixSeparator" that can be
+   used to control the prefix prepended to the imported target's
+   names.
 
  * a new task <include> provides an alternative to <import> that
    should be preferred when you don't want to override any targets.
